@@ -1,3 +1,7 @@
+2005-08-27 Alain Magloire
+	Fix PR 108205: limit the number of refresh by ignoring WorkingCopies events.
+	* src/org/eclipse/cdt/ui/CElementContentProvider.java
+
 2005-08-20 Alain Magloire
 	Fix PR 105613:  Preview label duplicated
 	* src/org/eclipse/cdt/internal/ui/preferences/CTemplatePreferencePage.java
